--- a/index.html
+++ b/index.html
@@ -8,10 +8,25 @@
 </head>
 <body>
     <h1>Gerador de Memes</h1>
-    <input type="text" id="text-input">
-    <div id="meme-image-container">
-        <div id="meme-text"></div>
-    </div>
+    <section id="section-input">
+    <label for="text-input">Texto: </label>
+    <input type="text" id="text-input" maxlength="60">
+    <label for="meme-insert">Foto: </label>
+    <input type="file" id="meme-insert" accept="image/*">
+    </section>
+    <section id="meme-image-container">
+        <img id="meme-image" src=""></img>
+        <section id="meme-text"></section>
+        <section id="section-button">
+        <span>Estilos Customizados :</span>
+        <button id="fire">FIRE</button>
+        <button id="water">WATER</button>
+        <button id="earth">EARTH</button>
+    </section>
+    </section>
+    <section id="section-canvas">
+        <canvas id="canvas" width="300" height="300"></canvas>
+    </section>
     <script src="script.js"></script>
 </body>
 </html>
